# dotter

./: .gitignore  Cargo.toml  README.md  build.rs  dotter
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build-for-release.yml  continuous-integration.yml
bintest/complex/expected/: binary_file  file1
bintest/complex/expected/dotter_settings/: secrets.toml
bintest/complex/expected/product/another/directory/: file2
bintest/complex/expected/product/some/directory/: file1
bintest/complex/expected/product/whole/dir/: file_inside_dir
bintest/complex/expected/product/whole/dir/recursion/: woah
bintest/complex/source/: clean_up
bintest/complex/source/dotter_settings/: files.toml  variables.toml
bintest/simple/: command.sh
bintest/simple/source/dotter_settings/: files.toml
completions/: _dotter  _dotter.ps1  dotter.bash  dotter.elv  dotter.fish  dotter.nu
example/: dotter.toml  dotter.yml  file2  secrets.toml  secrets.yml
example/dir/recursion/: woah
example/dotter_settings/: files.toml
src/: actions.rs  args.rs  config.rs  deploy.rs  difference.rs  file_state.rs  filesystem.rs  handlebars_helpers.rs  hooks.rs  init.rs  local_config.rs  macros.rs  main.rs  parse.rs  watch.rs
