[package]
name = "dotter"
version = "0.12.0"
authors = ["SuperCuber <amit.gold00@gmail.com>"]
description = "A dotfile manager and templater written in rust"
edition = "2018"
repository = "https://www.github.com/SuperCuber/dotter"
readme = "README.md"
keywords = ["dotter", "dotfiles", "manager"]
categories = ["command-line-utilities"]
license = "Unlicense"

[dependencies]
anyhow = "1.*"
clap = "2.*"
crossterm = "0.18.*"
diff = "0.1.*"
handlebars = { version = "3.*", features = ["script_helper"] }
handlebars_misc_helpers = "0.11.*"
log = "0.4.*"
maplit = "1.*"
meval = "0.2.*"
serde = "1.*"
shellexpand = "1.*"
simplelog = "0.8.*"
structopt = "0.3.*"
toml = "0.4.*"
watchexec = "=1.14.1"

[dev-dependencies]
mockall = "0.9.*"
# Enable this instead for better failure messages (on nightly only)
# mockall = { version = "0.9.*", features = ["nightly"] }

[target.'cfg(windows)'.dependencies]
dunce = "1.*"
